[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cevlib"
version = "1.0.6"
authors = [
  { name="dxstiny", email="dxstiny.gh@gmail.com" },
]
description = "inofficial python library for cev.eu"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dxstiny/cevlib"
"Bug Tracker" = "https://github.com/dxstiny/cevlib/issues"
